# ai-probe-router

./: .gitignore  README.md  out_rt.kicad_prl  pcb.txt  pyproject.toml  render_iot_advanced.py  render_iot_pcb.py  render_pcb.py  test.net  test_rt.kicad_prl  正在读取文档.md
ai_probe_router/: __init__.py  cli.py  config.py  config_schema.py  engine.py  native_findings.py  report_utils.py  subprocess_utils.py
docs/: design_spec.md  kicad_native_validation.md  kicad_plugin_manual_signoff.md  kicad_plugin_shell.md  library_governance.md  module_footprint_preview.md  pin_mapper_cp_sat.md  project_log.md  resource_allocator.md  roadmap.md  route_import_safety.md
examples/: full_config.yaml  iot_sensor_node_advanced_config.yaml  iot_sensor_node_config.yaml  module_config.yaml  motor_driver_config.yaml  sample_config.yaml
schemas/: chip_definition.schema.json  dev_board.schema.json  module_definition.schema.json  project_config.schema.json
scripts/: capture-baseline.sh  fix_embedded_symbols.py  kicad_native_baseline_create.py  kicad_native_baseline_review.py  kicad_native_group_findings.py  kicad_native_regression_gate.py  kicad_native_validate.py  kicad_project_healthcheck.py  plugin_signoff_validate.py  render_iot_advanced.py  render_iot_pcb.py
tests/: test_advanced_reports.py  test_audio_player_project.py  test_autorouter_pipeline.py  test_board_model.py  test_ci_contract.py  test_circuit_spec.py  test_cli.py  test_connector_allocator.py  test_connector_geometry.py  test_constraint_checker.py  test_datasheet_extractor.py  test_delivery_artifacts_pipeline.py  test_e2e.py  (+74 more)
(+209 files in other folders)
