[project]
name = "ai-probe-router"
version = "1.0.0"
description = "AI-assisted KiCad probe/test interface designer"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pytest>=8.0",
    "ruff>=0.4",
]
web = [
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]
solver = [
    "ortools>=9.9",
]

[project.scripts]
apr = "ai_probe_router.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
